[package]
name = "similar-asserts"
version = "1.4.2"
authors = ["Armin Ronacher <armin.ronacher@active-4.com>"]
edition = "2018"
license = "Apache-2.0"
description = "provides assert_eq! like macros with colorized diff output"
repository = "https://github.com/mitsuhiko/similar-asserts"
keywords = ["assert", "diff", "color"]
readme = "README.md"
exclude = ["assets/*"]
rust-version = "1.46.0"

[package.metadata.docs.rs]
all-features = true

[features]
default = ["unicode"]
unicode = ["similar/unicode"]

[dependencies]
similar = { version = "2.2.0", features = ["inline"] }
console = { version = "0.15.0", default-features = false }
serde = { version = "1.0.123", optional = true }

[dev-dependencies]
serde = { version = "1.0.123", features = ["derive"] }

[[example]]
name = "serde"
required-features = ["serde"]
